[package]
name = "chic"
version = "1.2.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/chic"
documentation = "https://docs.rs/chic"
description = "Pretty parser error reporting."
keywords = ["pretty", "error", "reporting", "stream"]
categories = ["parser-implementations"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
annotate-snippets = "0.9.1"

[dev-dependencies]
